--- a/index.html
+++ b/index.html
@@ -1154,12 +1154,12 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/publication/m33-paper/" >Going Probablistic: Probing the Distributional Properties of Stellar Objects in M33 with Gibbs Point Process Model</a>
+      <a href="/publication/m33-paper/" >Gibbs Point Process Model for Young Star Clusters in M33</a>
     </h3>
 
     
     <div class="article-style">
-      We demonstrate the power of spatial statistical modelling when applied to stellar population studies. Using Gibbs point process (GPP) …
+      We demonstrate the power of Gibbs point process models from the spatial statistics literature when applied to studies of resolved …
     </div>
     
 
