--- a/talk/index.html
+++ b/talk/index.html
@@ -604,7 +604,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/talk/jsm2020-talk/" >Going Probablistic: Probing the Distributional Properties of Stellar Objects in M33 with Gibbs Point Process Model</a>
+      <a href="/talk/jsm2020-talk/" >Gibbs Point Process Model for Objects in the Star Formation Complexes of M33</a>
     </h3>
 
     
