--- a/about-me/index.html
+++ b/about-me/index.html
@@ -613,11 +613,8 @@
   <div class="article-container">
 
     <div class="article-style">
-      <h4 id="where-i-am-from">Where I am from</h4>
-<p>I'm originally from <a href="https://en.wikipedia.org/wiki/Zhuzhou" target="_blank">Zhuzhou</a>, <a href="https://en.wikipedia.org/wiki/Hunan" target="_blank">Hunan</a>, China, a &ldquo;small&rdquo; town with just over 4 million population. I then moved to <a href="https://en.wikipedia.org/wiki/Changsha" target="_blank">Changsha</a> for my high school education at <a href="https://en.wikipedia.org/wiki/Yali_High_School" target="_blank">Yali High School</a>. After that, I came to Canada for my post-secondary education.</p>
-<h4 id="how-to-pronounce-my-name">How to pronounce my name</h4>
-<p>My Chinese name is 李大一， 李 (pinyin：Lǐ) is the family name; 大一 (pinyin: Dà Yī) is my first name and it is quite unique. According to the police record, there are only 3 people having the same name as me in my home province Hunan, which has a population of 67 million. So finding me wouldn't be that difficult.</p>
-<p>If you find it difficult to pronounce my Chinese name, just stick with my English name David and I actually prefer it nowadays since people hardly get my Chinese name right. Although yelling David in a crowd will probably lead to many head-turnings and confusions.</p>
+      <h4 id="my-name">My name</h4>
+<p>My Chinese name is 李大一， 李 (Li, don't think there's any issue with how to pronounce it) is the family name; 大一 (Dah Yee) is my first name. Quite ironically, the literal translation of my first name is &ldquo;Big One&rdquo; while I am no where near anything big (although my head may have an above average size). Certainly, it doesn't carry the meaning of its literal translation, but I don't know what it really means since my dad is still not willing to tell me.</p>
 <h4 id="hobbies">Hobbies</h4>
 <p>I draw and doodle in my spare time. In fact, I was aiming for a career as an artist all the way till high school. But I dropped it as a career path due to multiple reasons and it ended up as a hobby after high school. It still provides me with a lot of calm and comfort, however, and I enjoy the absolute freedom when I let my imagination loose.</p>
 <p>I am also a die-hard Barcelona fan simply because of the GOAT &mdash; Lionel Messi. I don't think there should be any debate on whether Messi or Ronaldo is the best player of the world because Ronaldo is simply not on the same level as Messi, as supported by the analysis and results found in the following paper:</p>
