--- a/index.html
+++ b/index.html
@@ -1388,7 +1388,7 @@
       
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-        <span id="person-email"><a href="mailto:dli346@uwo.ca">dli346@uwo.ca</a></span>
+        <span id="person-email"><a href="mailto:dayi.li@mail.utoronto.ca">dayi.li@mail.utoronto.ca</a></span>
       </li>
       
 
