--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@
 
 
   
-  <span><a href="/authors/dayi-li/">Dayi Li</a></span>, <span><a href="/authors/pauline-barmby/">Pauline Barmby</a></span>, <span><a href="/authors/ian-mcleod/">Ian McLeod</a></span>
+  <span><a href="/authors/dayi-li/">Dayi Li</a></span>, <span><a href="/authors/pauline-barmby/">Pauline Barmby</a></span>
 
       </div>
       
