--- a/publication/index.html
+++ b/publication/index.html
@@ -639,12 +639,12 @@
 
 
   
-  <span><a href="/authors/dayi-li/">Dayi Li</a></span>, <span><a href="/authors/pauline-barmby/">Pauline Barmby</a></span>, <span><a href="/authors/ian-mcleod/">Ian McLeod</a></span>
+  <span><a href="/authors/dayi-li/">Dayi Li</a></span>, <span><a href="/authors/pauline-barmby/">Pauline Barmby</a></span>
 
   </span>
   (2020).
   <a href="/publication/m33-paper/">Gibbs Point Process Model for Young Star Clusters in M33</a>.
-  Work in Progress.
+  Submitted to MNRAS.
   
   <p>
 
