--- a/publication/m33-paper/index.html
+++ b/publication/m33-paper/index.html
@@ -636,7 +636,7 @@
 
 
   
-  <span><a href="/authors/dayi-li/">Dayi Li</a></span>, <span><a href="/authors/pauline-barmby/">Pauline Barmby</a></span>, <span><a href="/authors/ian-mcleod/">Ian McLeod</a></span>
+  <span><a href="/authors/dayi-li/">Dayi Li</a></span>, <span><a href="/authors/pauline-barmby/">Pauline Barmby</a></span>
 
   </div>
   
@@ -726,7 +726,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Work in Progress</div>
+          <div class="col-12 col-md-9">Submitted to MNRAS</div>
         </div>
       </div>
       <div class="col-md-1"></div>
