--- a/about-me/index.html
+++ b/about-me/index.html
@@ -617,9 +617,7 @@
 <p>My Chinese name is 李大一， 李 (Li, don't think there's any issue with how to pronounce it) is the family name; 大一 (Dah Yee) is my first name. Quite ironically, the literal translation of my first name is &ldquo;Big One&rdquo; while I am no where near anything big (although my head may have an above average size). Certainly, it doesn't carry the meaning of its literal translation, but I don't know what it really means since my dad is still not willing to tell me.</p>
 <h4 id="hobbies">Hobbies</h4>
 <p>I draw and doodle in my spare time. In fact, I was aiming for a career as an artist all the way till high school. But I dropped it as a career path due to multiple reasons and it ended up as a hobby after high school. It still provides me with a lot of calm and comfort, however, and I enjoy the absolute freedom when I let my imagination loose.</p>
-<p>I am also a die-hard Barcelona fan simply because of the GOAT &mdash; Lionel Messi. I don't think there should be any debate on whether Messi or Ronaldo is the best player of the world because Ronaldo is simply not on the same level as Messi, as supported by the analysis and results found in the following paper:</p>
-<p><span style="font_size:90%">Tom Decroos, Lotte Bransen, Jan Van Haaren, and Jesse Davis, (2019) <a href="https://arxiv.org/pdf/1802.07127.pdf" target="_blank">Actions Speak Louder than Goals:
-Valuing Player Actions in Soccer</a>, In <em>The 25th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD ’19)</em>.</span></p>
+<p>I am also a die-hard Barcelona fan simply because of the GOAT &mdash; Lionel Messi. The debate on whether he is the GOAT has already settled after the 2022 WC.</p>
 <p>I also quite enjoy classical musics as well as movie scores when I need to focus and study. Debussy and Mozart are probably on the top of my list. Interstellar and Star Wars soundtracks are simply genius.</p>
 <p>I am also an avid fantasy/sci-fi fan. It might be cliche, but Star Wars, LOTR and Harry Potter can always make me go on and on.</p>
 
