--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Ph.D. Student at the University of Toronto">
+  <meta name="description" content="Ph.D. Candidate at the University of Toronto">
 
   
   <link rel="alternate" hreflang="en-us" href="https://davidolohowski.github.io/404.html">
@@ -231,7 +231,7 @@
   <meta property="og:site_name" content="Dayi (David) Li">
   <meta property="og:url" content="https://davidolohowski.github.io/404.html">
   <meta property="og:title" content="404 Page not found | Dayi (David) Li">
-  <meta property="og:description" content="Ph.D. Student at the University of Toronto"><meta property="og:image" content="https://davidolohowski.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Ph.D. Candidate at the University of Toronto"><meta property="og:image" content="https://davidolohowski.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="twitter:image" content="https://davidolohowski.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
   
     
